--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
   <head>
     <meta charset = "utf-8">
     <title> lotus </title>
-    <link rel = "stylesheet" src = "style.css">
+    <link rel = "stylesheet" href = "style.css">
   </head>
 
   <body>
     <script src = "js/three.min.js"></script>
     <script src = "js/OrbitControls.js"></script>
+    <script src = "js/Water.js"></script>
     <script src = "js/GLTFLoader.js"></script>
     <script src = "js/main.js"></script>
+
+    <p> lotus flower </p>
   </body>
 
 </html>
